--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,11 @@
 @layer base {
   html {
     scroll-behavior: smooth;
+    @apply overflow-x-hidden;
   }
 
   body {
-    @apply text-gray-800 antialiased;
+    @apply text-gray-800 antialiased overflow-x-hidden;
   }
 
   h1, h2, h3, h4, h5, h6 {
